Fixed horizontal scrolling

--- a/css/styles-misc.css
+++ b/css/styles-misc.css
@@ -21,6 +21,10 @@ header {
   background: #111;
 }
 
+header h1 {
+  border-bottom: 1px solid #d3d3d3;
+}
+
 footer {
   width: 100%;
   background: #111;
@@ -28,8 +32,8 @@ footer {
   padding-bottom: 30px;
   /* margin-top: 50px;
   height:80px;
-  position: absolute;
-  bottom: 0;
+  position: absolute; */
+  /* bottom: 0;
   left: 0; */
 }
 
@@ -73,16 +77,10 @@ footer {
   opacity: 0.85;
 }
 
-/* #wrapper {
-  min-height: 100%;
-  position: relative;
-} */
-
 /* Main */
 .content {
   width: 100%;
   height: 100%;
-  padding: 10px;
   padding-bottom: 80px;
 }
 
